# fanops

./: .env.example  .fastembed_cache  .gitignore  .markdownlint.json  .preflight-delete-me  05-U4-run-queue-gate.md  2026-05-31-fanops-real-build-v2.md  2026-05-31-fanops-real-build.md  2026-05-31-mohflow-fanops.md  AGENTS.md  CLAUDE.md  ORCHESTRATION.md  PROBE.sh  README.md  clipping_account_archetypes.json  pyproject.toml
.agents/: _shared-guardrails.md  _worker-protocol.md  ci-agent.md  lanes.json  picking-agent.md  publish-agent.md  rfd-agent.md
.agents/ci-hardening/: pr1-false-confidence.md  pr2-slow-marker-parity.md  pr3-platform-hygiene.md
.claude/: hookify.block-bandaid-verbs-in-plans.local.md  hookify.block-bash-write-bypass.local.md  hookify.block-commit-control-files.local.md  hookify.block-disable-via-edit.local.md  hookify.block-git-reset-hard.local.md  hookify.block-live-control-files.local.md  hookify.block-operator-gate-hedging.local.md  hookify.block-out-of-band-script-run.local.md  hookify.block-overclaim-without-proof.local.md  hookify.block-readd-hook-gate.local.md  hookify.block-reformat.local.md  hookify.block-reset-state-files.local.md  hookify.block-silent-fail-open.local.md  hookify.block-speculative-live-cli.local.md  hookify.block-stub-theater.local.md  hookify.block-test-defeating.local.md  hookify.block-unasked-frugality.local.md  hookify.block-unbacked-completion-claim.local.md  hookify.block-wipe-ledger.local.md  hookify.nudge-decide-dont-ask.local.md  hookify.warn-disabling-guardrails.local.md  settings.json
.claude/agents/: fanops-lander.md  fanops-worker.md
.claude/commands/: fanops-orchestrator.md
.claude/hooks/: anti-divert-contract.py  block-hedge-on-stop.py  completion_evidence.py  darwin_test_gate.py  decide_dont_ask.py  hookify-run.py  orchestration_gate_claude.py  stop-completion-gate.py
.claude/prds/: review-first-studio.prd.md
.claude/workflows/: fanops-deep-audit.js  fanops-discover.js  fanops-phase-d-confirm.js  fanops-phase-d.js  fanops-phase-e.js  fanops-phase-f.js  fanops-subtitles.js  fanops-tail.js  fanops-variation.js  variant-learning-v2.js
.codanna/: .project-id  settings.toml
.cursor/: environment.json  hooks.json
.cursor/agents/: fanops-codemap-sync.md  fanops-lander.md  fanops-orchestrator.md  fanops-picking.md  fanops-publish.md  fanops-rfd.md  fanops-worker.md
.cursor/automations/: codemap-sync.md
.cursor/hooks/: orchestration_gate.py
.githooks/: README.md  pre-commit  pre-push
.github/: CODEOWNERS  ci-control-registry.schema.json  ci-control-registry.yml  dependabot.yml
.github/workflows/: architecture.yml  ci.yml  codemap-sync-trigger.yml  codemap-sync.yml  lane-guard.yml  nightly.yml  open-feature-pr.yml
.orchestration/: .gitignore  SPEC.md
.reports/: ast_extract.py  build_graphs.py  call_graph.json  ci-test-perf-investigation.md  codemap-diff.txt  import_graph.json  structural_index.json  unreferenced_candidates.json
.reports/architecture/: ARCHITECTURE_MANIFEST.md  CHANGE_INTERFERENCE_MATRIX.md  COUPLINGS.md  CRASH_RECOVERY.md  CYCLE2_EXTENSION.md  CYCLE3_CORRECTIONS.md  CYCLE4_CORRECTIONS.md  CYCLE5_CORRECTIONS.md  CYCLE6_CORRECTIONS.md  DEPENDENCY_MODEL.md  EXECUTION_PATHS.md  FAILURE_SEMANTICS.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_GOVERNANCE.md  IMPLEMENTATION_READINESS.md  IMPLEMENTATION_SEQUENCE.md  INVARIANT_AUDIT.md  INVENTORY.md  KNOWLEDGE_BASE.md  MUTATION_MATRIX.md  OBSERVABILITY.md  REMEDIATION_OPTIONS.md  ROOT_CAUSE_GRAPH.md  SIDE_EFFECT_GRAPH.md  STATE_MACHINE.md  change_interference.json  couplings.json  failures.json  implementation_sequence.json  invariants.json  inventory.json  mutation_writers.json  remediation_options.json  retries.json  root_causes.json  route_contract.json  side_effects.json  transitions.json  workflows.json
.wrangler/cache/: wrangler-account.json
MohFlow-FanOps/00_control/: RISK.md  RUNTIME.md  accounts.json  context.md  ledger.sqlite
docs/: ARCHITECTURAL_LAWS.md  ARCHITECTURE_GOVERNANCE.md  ARCH_RUNBOOK.md  CI_ARCHITECTURE_REVIEW.md  CI_SLO.md  CONFIG.md  CONSTITUTION-EVIDENCE-DOSSIER.md  CONTROL-FILES.md  ENGINEERING_PHILOSOPHY.md  ENGINEERING_STANDARDS.md  FLAGS.md  GOLIVE.md  HANDOFF-LEARNING-SEAM.md  INSTAGRAM_CONNECT.md  LEVER-THRESHOLDS.md  LEVERS.md  META_CREDS_OPS.md  POSTIZ_OPS.md  POSTIZ_SETUP.md  REPOSITORY_CONSTITUTION.md  RUNBOOK.md  SCAFFOLDING-VERDICT.md  YOUTUBE_CONNECT.md  handoff.md
docs/CODEMAPS/: README.md  account-connection.md  anomalies.md  architecture.md  data.md  dependencies.md  full-trace-index.md  (+7 more)
requirements/: ci-e2e.txt  ci-unit.txt
scripts/: _ci_perf_count_plugin.py  base_install_smoke.py  check-full.sh  check-locks.sh  check.sh  check_scope.py  ci_e2e_relevance.py  ci_e2e_trigger.py  ci_env_probe.py  ci_perf_aggregate_durations.py  ci_perf_count_refresh.py  ci_perf_extract_runs.py  ci_slo_gate.py  ci_timing_report.py  codemap-sync-operator-setup.sh  codemap_drift.py  gen_framing_vectors.py  lane_guard.py  lock-deps.sh  mol164_canon_test_handles.py  orchestrate.py  pr_collision_guard.py  repo_sweep.py  scan-secrets.sh  setup-hooks.sh
tests/: CLAUDE.md  _require_e2e.py  conftest.py  keyring_fake.py  test_account_first_e2e.py  test_account_first_review.py  test_account_framing.py  test_account_handle_canonical.py  test_account_selection.py  test_account_selection_migration.py  test_accounts.py  test_accounts_backend_normalize.py  test_accounts_malformed_row.py  test_accounts_routing_coconstraint.py  test_actions_casting.py  test_adjust.py  test_agentstep.py  test_arch_governance.py  test_archetype_differentiation.py  test_artifacts.py  test_audio_energy.py  test_audit_trail.py  test_auto_corpus.py  test_autopilot.py  test_b02_publish_path.py  test_b06_render_cache_integrity.py  test_bands.py  test_batches.py  test_blotato_contract.py  test_blotato_mcp.py  test_blotato_rest.py  test_bringup.py  test_bulk_approve_spread.py  test_canary_tooling.py  test_caption.py  test_caption_scoping.py  test_casting.py  test_casting_account_leak.py  test_casting_affinities_repair.py  test_casting_application.py  (+358 more)
(+442 files in other folders)
