[project]
name = "fanops"
version = "0.3.0"
description = "MOH FLOW FAN OPS — intelligent clip + cross-post engine"
requires-python = ">=3.12,<3.14"
dependencies = ["pydantic>=2.7", "requests>=2.31", "python-dotenv>=1.0", "yt-dlp>=2024.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-timeout>=2.3", "pytest-cov>=5.0", "ruff>=0.5"]
# Local transcription. Installed into the venv in Task 2. (whisper CLI lands on PATH.)
transcribe = ["openai-whisper>=20231117"]
# Local web cockpit (spec §10). Flask is OPTIONAL: `pip install -e .` (core CLI) stays Flask-free;
# only `pip install -e '.[studio]'` pulls it. The CLI imports it LAZILY so a no-[studio] install runs.
studio = ["flask>=3.0"]
# Produced-clip compositing (operator-chosen 2026-06-14): multi-layer template cards, dynamic text
# titles, and crossfade transitions via MoviePy. OPTIONAL + lazy-imported like [studio]/[transcribe]
# — `pip install -e .` stays MoviePy-free; only `.[compose]` pulls it (drags numpy/Pillow/imageio).
# fanops.compose imports it lazily and FAILS OPEN (copies the base clip) when absent, so a
# no-[compose] install never breaks the render path. MoviePy 2.x API only (no moviepy.editor).
compose = ["moviepy>=2.0"]
# Accurate music transcription (the two biggest ASR-accuracy levers for rap/song): Demucs strips the
# beat so Whisper reads the lyrics, not the instrumental; faster-whisper runs large-v3 (the proven
# accuracy winner over turbo) at int8 so it's practical on CPU. OPTIONAL + lazy + FAIL-OPEN like the
# others — `pip install -e .` stays free of both; only `.[asr]` pulls them (drags torch). Without the
# extra, isolate_vocals returns RAW audio and transcribe falls back to the legacy `whisper` CLI, so a
# no-[asr] install transcribes exactly as before. certifi ships the CA bundle (macOS model-download fix).
asr = ["demucs>=4.0", "faster-whisper>=1.0", "certifi"]
# Subject-aware reframe (smart framing): OpenCV detects the dominant face per cut window so the 9:16 crop
# follows the subject instead of the blind top/center guess. OPTIONAL + lazy + FAIL-OPEN like the others —
# `pip install -e .` stays OpenCV-free; only `.[framing]` pulls it (numpy already comes via [compose]).
# fanops.framing imports cv2 lazily and returns None when absent, so a no-[framing] install crops centered
# exactly as before. headless wheel = no GUI/Qt deps (it only reads frames + detects boxes).
framing = ["opencv-python-headless>=4.9"]

[project.scripts]
fanops = "fanops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Vendored YuNet face-detection model for smart framing ([framing] extra). Shipped in-package so
# detection is offline + deterministic (no first-use download). ~232KB.
fanops = ["data/*.onnx"]

[tool.ruff]
# Lint is wired for ENFORCEMENT GOING FORWARD (catch unused/undefined names, syntax errors),
# not to mass-reformat the existing tree (audit (i)). Conservative select: pyflakes (F — the
# real-bug class: unused imports, undefined names) + pycodestyle errors (E — incl. E9 syntax).
line-length = 120
[tool.ruff.lint]
select = ["E", "F"]
# These four E-rules flag a DELIBERATE house style, not defects, so silencing them keeps the
# check green without a sweeping diff (the rest of E + all of F stay enforced):
#   E701/E702 — compact one-liners (`if x: y`, `a; b`) used throughout for terse guards/imports.
#   E401      — grouped imports (`import re, subprocess`) — same compact convention.
#   E501      — a few dense AUDIT-provenance comment lines run long on purpose; wrapping them
#               would fragment load-bearing rationale. line-length=120 still documents intent.
ignore = ["E701", "E702", "E401", "E501"]
[tool.ruff.lint.per-file-ignores]
# E402 in tests is the REQUIRED import-after-code pattern: pytest.importorskip("flask") /
# env seeding must run BEFORE importing the module under test. Not a defect; src/ stays enforced.
"tests/*" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: hits real ffmpeg/whisper/Blotato sandbox (deselect with -m 'not integration')",
  "slow: cross-face proofs; deselect with -m 'not integration and not slow'",
]
# Global per-test timeout (pytest-timeout): a concurrency regression that self-deadlocks under the
# ledger flock (e.g. a locking save() inside a transaction) FAILS FAST here instead of hanging CI
# for the 30s lock timeout × N. The lock/deadlock tests rely on this (Phase B guardrail). 60s is
# well above any real test (the slowest, the real-tooling E2E, runs in ~10-20s).
timeout = 60
